...
            OutlinedTextField(
                value = inputText,
                onValueChange = {inputText = it},
                placeholder = {Text("Enter a Task...")},
                modifier = Modifier
                    .weight(1f)
                    .testTag("input_field"),
                singleLine = true
            )
            Spacer(modifier = Modifier.width(8.dp))
            Button(
                onClick = {
                    viewModel.addTask(inputText)
                    inputText = ""
                },
                modifier = Modifier.testTag("add_button")
            ){
                Text("Add")
            }
        }
        Spacer(modifier = Modifier.height(24.dp))
        Text(
...
